@@ -5,6 +5,7 @@ $Id$
 July 31, 2009
 -------------
 #524592 by Dave Reid: Added email to fake user object sent to Author Pane on comments for anon users.
+#534816 by Michelle: Made sure all classes / IDs were forum specific.
 
 July 30, 2009
 -------------
